--- a/FredericoLuna.ipynb
+++ b/FredericoLuna.ipynb
@@ -32,7 +32,7 @@
       "source": [
         "Esse exercício conta como uma prova, já que é necessário que ele seja completado para a geração do teu certificado.\n",
         "\n",
-        "Crie uma cópia desse arquivo com o Teu Nome e envie para mim via Whatsapp ou diretamente para o Email: ulpionetto0@gmail.com\n",
+        "Crie uma cópia desse arquivo com o Teu Nome e envie para mim via Whatsapp ou diretamente para o Email: ulpio@email.com\n",
         "\n",
         "Boa Sorte!\n",
         "\n",
